[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/components/BaseComponent.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/Light.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/components/ChordComponent.gd" type="Script" id=3]

[node name="ChordComponent" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Light4" parent="." index="1" instance=ExtResource( 2 )]
key = "h"

[node name="Light3" parent="." index="2" instance=ExtResource( 2 )]
key = "g"

[node name="Light2" parent="." index="3" instance=ExtResource( 2 )]
key = "y"

[node name="Light1" parent="." index="4" instance=ExtResource( 2 )]
key = "t"
